--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -91,12 +91,12 @@ p{
 }
 
 .home-content {
-    flex: 1;
+    /* flex: 1; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    text-align: left;
+    text-align: auto;
 }
 
 .home-content h1 {
@@ -219,10 +219,10 @@ p{
 .heading {
     font-size: 8rem;
     text-align: center;
-    margin: 2rem 0; /* Reduce the margin */
-    position: relative; /* Use relative positioning */
-    top: 0; /* Position at the top of its container */
-    z-index: 10; /* Ensure it appears above other elements */
+    margin: 2rem 0; 
+    position: relative;
+    top: 0; 
+    z-index: 10; 
 }
 
 .educationpage{
@@ -289,5 +289,31 @@ p{
  box-shadow: 0 0 10px var(--main-color);
  cursor: pointer;
  transition: 0.3s ease-in-out;
+}
+.timeline-content:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 25px var(--main-color);
+}
+.timeline-content h3{
+    font-size: 20px;
+    font-weight: 500;
+    margin: 0 0 10px;
+    color: white;
+}
+.timeline-content p{
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 300;
+    color: var(--text-color);
+}
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-track{
+    background-color: var(--main-color);
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--bg-color);
+    border-radius: 50px;
 }
 
