--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -395,3 +395,16 @@ p {
     max-height: 200px;
     padding: 5rem 5rem;
 }
+.service-info h4 {
+    font-size: 3rem;
+    margin-bottom: 800;
+    line-height: 2;
+}
+.service-info p {
+    font-size: 1.4rem;
+    font-weight: 600;
+    max-height: 1000px;
+    line-height: 1.7;
+    margin: auto;
+    color: black;
+}
