--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -13,7 +13,7 @@
     --bg-color: #080808;
     --second-bg-color: #131313;
     --text-color: #fff;
-    --main-color: #0ef;
+    --main-color: #05b5a6;
 }
 
 html {
@@ -407,4 +407,49 @@ p {
     line-height: 1.7;
     margin: auto;
     color: black;
+}
+/* projects page */
+
+.projects{
+    background: var(--second-bg-color);   
+}
+.project-box{
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.projects .heading{
+    margin-bottom: 5rem;
+}
+.project-box img{
+    width: 30rem;
+    border-radius: 10%;
+    border : 3px solid var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    margin-bottom: 15px;
+}
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+}
+.testimonial-item {
+  min-height: 600px;
+  max-width: 600px;
+  background: rgba(0, 0, 0, 0.7);
+  border: 3px solid rgba(238, 238, 238, 0.2);
+  border-radius: 10px;
+  margin: 0 2rem;
+  padding: 30px 60px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 1.5rem;
+  color: #fff;
+  transition: 0.4s ease-in-out;
 }
